# semanticFirewall

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  adapter_harness.py  audit.py  canonicalization.py  config.py  exceptions.py  grounding.py  hashing.py  main.py  models.py  normalization.py  pipeline.py  proposals.py  storage.py
docs/: index.html
experiments/: adapter_harness_report.md  canonicalization_cases.json  canonicalization_report.md  human_proposals.json  report.md  run_adapter_harness.py  run_canonicalization_eval.py  run_experiments.py  sample_chunks.json  sample_drafts.json
tests/: conftest.py  test_adapter_harness.py  test_adversarial_grounding.py  test_api.py  test_canonicalization.py  test_grounding.py  test_hashing_idempotence.py  test_human_proposal_generator.py  test_normalization.py  test_pipeline_failures.py  test_pipeline_success.py  test_transition_certificates.py
